# C-Sharp-Project-Template

./: .gitignore  Cargo.toml  README.md  cylinder.json  dive_profile.json  dive_step.json
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: TestCode.yml  action.yml  rust.yml
BubblesDivePlanner/: BubblesDivePlanner.csproj  Program.cs
BubblesDivePlanner/Controllers/: CylinderController.cs  GasMixtureBuilder.cs  ICylinderController.cs  IGasMixtureBuilder.cs
BubblesDivePlanner/Models/: DivePlan.cs  DiveStep.cs  IDivePlan.cs  IDiveStep.cs
BubblesDivePlanner/Presenters/: IPresenter.cs  Presenter.cs
BubblesDivePlannerTests/: BubblesDivePlannerTests.csproj  TestFixture.cs  TestHelper.cs
BubblesDivePlannerTests/Controllers/: CylinderControllerShould.cs  GasMixtureBuilderShould.cs
BubblesDivePlannerTests/Models/: DivePlanShould.cs  DiveStepShould.cs
Example/: Example.csproj  Program.cs
Example/Controllers/: Controller.cs  IController.cs
Example/Models/: IModel.cs  Model.cs
Example/Presenters/: IPresenter.cs
ExampleTests/: ExampleTests.csproj
ExampleTests/Controllers/: ControllerShould.cs
ExampleTests/Models/: ModelShould.cs
src/: commands.rs  controllers.rs  factories.rs  main.rs  models.rs  notes.txt  presenters.rs  tests.rs
src/commands/: a_b_values.rs  ambient_pressures.rs  compartment_loads.rs  dive_stages.rs  files.rs  max_surface_pressures.rs  states.rs  tissue_pressures.rs  tolerated_ambient_pressures.rs
src/controllers/: dive_stage.rs  file_controller.rs  gas_management.rs  gas_mixture.rs  state.rs
src/factories/: file_factory.rs  (+2 more)
(+118 files in other folders)
