[package]
name = "bubbles_dive_planner_rust"
version = "0.1.0"
authors = ["Skippy <steelstone3@gmail.com>"]
edition = "2018"
homepage = "https://github.com/Steelstone3/Bubbles-Dive-Planner-Console"
repository = "https://github.com/Steelstone3/Bubbles-Dive-Planner-Console"
license = "GPLv3"
readme = "README.md"
include = [

]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
